--- a/node33.html
+++ b/node33.html
@@ -228,12 +228,12 @@ PEG Syntax</A>
   
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6166"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6170"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6168"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6172"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -251,7 +251,7 @@ integer "integer"
 </PRE>
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6172"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6176"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -287,7 +287,7 @@ Initializers</A>
   
 
 <UL>
-<LI>Rules can be preceded by an <A NAME="6182"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+<LI>Rules can be preceded by an <A NAME="6186"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
 code in curly braces (<code>{</code> and <code>}</code>). 
 </LI>
 <LI>
@@ -297,7 +297,7 @@ before the generated parser starts parsing</FONT>
 <LI>All variables and functions
 defined in the initializer are accessible in rule actions and semantic
 predicates (the <code>&amp; { predicate }</code> and <code>! { predicate }</code> 
-are called <A NAME="6186"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
+are called <A NAME="6190"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
 </LI>
 <LI>The code inside the initializer can access options passed to
 the parser using the <code>options</code> variable. 
@@ -386,7 +386,7 @@ action.
 actions via <code>this</code> and the security to just assign variables for local
 use like you are used to when writing CoffeeScript.
 </LI>
-<LI>this is the Coffee version of the former JavaScript example:
+<LI>This is the Coffee version of the former JavaScript example:
 <PRE>
 [~/srcPLgrado/pegjs_examples(master)]$ cat initializer.coffee
 PEG = require('pegjs')
@@ -444,7 +444,7 @@ Expressions can also contain references to other rules.
 
 <P>
 If an expression successfully matches a part of the text when running the
-generated parser, it produces a <A NAME="6194"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
+generated parser, it produces a <A NAME="6198"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
 
 <P>
 
@@ -469,7 +469,7 @@ Parser Actions</A>
   
 
 <P>
-One special case of parser expression is a <A NAME="6206"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
+One special case of parser expression is a <A NAME="6210"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
 JavaScript code inside curly braces (<code>{</code> and <code>}</code>) that 
 <FONT COLOR="#ff0000"> takes match
 results of some of the the preceding expressions and returns a JavaScript
@@ -571,25 +571,35 @@ When executed produces:
 <LI><code>[characters]</code>
 
 <P>
-Match one character from a set and return it as a string. 
+
+<UL>
+<LI>Match one character from a set and return it as a string. 
 
 <P>
-The characters
+</LI>
+<LI>The characters
 in the list can be escaped in exactly the same way as in JavaScript
 string. 
 
 <P>
-The list of characters can also contain ranges (e.g. <code>[a-z]</code>
+</LI>
+<LI>The list of characters can also contain ranges (e.g. <code>[a-z]</code>
 means all lowercase letters). 
 
 <P>
-Preceding the characters with
+</LI>
+<LI>Preceding the characters with
 <code>^</code> inverts the matched set (e.g. <code>[^a-z]</code> means <I>"all character but
 lowercase letters</I>). 
 
 <P>
-Appending <code>i</code> right after the literal makes the
+</LI>
+<LI>Appending <code>i</code> right after the literal makes the
 match case-insensitive.
+</LI>
+<LI>Example:
+
+<P>
 
 <pre>
 [~/srcPLgrado/pegjs_examples(master)]$ cat regexp.coffee 
@@ -607,6 +617,8 @@ console.log r
 [ 'A', 'b', 'r' ]
 [ '♡', 'b', 'r' ]
 </pre>
+</LI>
+</UL>
 
 <P>
 </LI>
@@ -629,8 +641,9 @@ expression *
 </PRE>
 Match zero or more repetitions of the expression and 
 <FONT COLOR="#ff0000"> return their match
-results in an array</FONT>. The matching is greedy, i.e. the parser tries to
-match the expression as many times as possible.
+results in an array</FONT>. 
+<FONT COLOR="#0000ff"> The matching is <B>greedy</B>, i.e. the parser tries to
+match the expression as many times as possible</FONT>.
 </LI>
 <LI><PRE>
 expression +
@@ -964,7 +977,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6236"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6243"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -985,7 +998,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6238"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6245"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
