--- a/node33.html
+++ b/node33.html
@@ -731,7 +731,7 @@ Both return one-based indexes.
 
 <P>
 </LI>
-<LI>the follwing CoffeeScript example illustrates all these points:
+<LI>The following CoffeeScript example illustrates all these points:
 <PRE>
 [~/srcPLgrado/pegjs_examples(master)]$ cat semantic_predicate.coffee 
 PEG = require('pegjs')
