--- a/node33.html
+++ b/node33.html
@@ -903,15 +903,15 @@ function, which makes the parser throw an exception.
 
 <P>
 The function takes
-one parameter — a description of what was expected at the current
-position. This description will be used as part of a message of the
+one parameter — a <code>description</code> of what was expected at the current
+position. This<code> description</code> will be used as part of a message of the
 thrown exception.
 
 <P>
 </LI>
 <LI>The code inside an action can also invoke the <code>error</code> function, which also
 makes the parser throw an exception. The function takes one parameter
-— an error message. This message will be used by the thrown exception.
+— an <code>error</code> message. This message will be used by the thrown exception.
 
 <P>
 </LI>
