--- a/node33.html
+++ b/node33.html
@@ -678,7 +678,7 @@ the match failed.
 
 <P>
 </LI>
-<LI>Here is an example:
+<LI>Here is an example recognizing JavaScript one line comments:
 <PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ cat notpredicate.pegjs 
 start = __ $[0-9]+ __
