--- a/node33.html
+++ b/node33.html
@@ -350,7 +350,7 @@ inside predicate: visible variable
 2
 </PRE>
 </LI>
-<LI>In the coffee-pegjs-plugin 
+<LI>In the <code>coffee-pegjs-plugin</code>
 You have a save scope shared between all actions and predicates.
 
 <UL>
