--- a/node33.html
+++ b/node33.html
@@ -358,8 +358,8 @@ You have a save scope shared between all actions and predicates.
 
 <P>
 </LI>
-<LI>Afterwards you can add and remove stuff <code>delete myObject.property</code> as much as you
-like. 
+<LI>Afterwards you can add and remove stuff (Using for instance <code>delete myObject.property</code>) 
+as much as you like. 
 </LI>
 <LI>This scope is there even if you don't use the <code>initializer</code>.
 
