--- a/node34.html
+++ b/node34.html
@@ -1018,6 +1018,7 @@ La Gramática de PEG.js</A>
 <P>
 <PRE>
 [~/srcPLgrado/pegjs(master)]$ cat src/parser.pegjs 
+grammar
   = __ initializer:initializer? rules:rule+ 
 
 initializer
