--- a/node34.html
+++ b/node34.html
@@ -1068,7 +1068,7 @@ action "action"
   = braced __ 
 
 braced
-  = $("{" (braced / nonBraceCharacters)* "}")
+  = "{" (braced / nonBraceCharacters)* "}"
 
 nonBraceCharacters
   = nonBraceCharacter+
@@ -1109,7 +1109,7 @@ dot       = "." __
  * purpose in the grammar.
  */
 identifier "identifier"
-  = $((letter / "_") (letter / digit / "_")*) __ 
+  = (letter / "_") (letter / digit / "_")* __ 
 
 /*
  * Modeled after ECMA-262, 5th ed., 7.8.4. (syntax &amp; semantics, rules only
@@ -1176,10 +1176,10 @@ zeroEscapeSequence
   = "\\0" !digit 
 
 hexEscapeSequence
-  = "\\x" $(hexDigit hexDigit) 
+  = "\\x" hexDigit hexDigit)
 
 unicodeEscapeSequence
-  = "\\u" $(hexDigit hexDigit hexDigit hexDigit) 
+  = "\\u" hexDigit hexDigit hexDigit hexDigit)
 
 eolEscapeSequence
   = "\\" eol 
