--- a/node32.html
+++ b/node32.html
@@ -118,9 +118,11 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1623"
   HREF="node32.html#SECTION04420070000000000000">Opciones: plugin</A>
 <LI><A NAME="tex2html1624"
-  HREF="node32.html#SECTION04420080000000000000">cache</A>
+  HREF="node32.html#SECTION04420080000000000000">PEGjs  Coffee Plugin </A>
 <LI><A NAME="tex2html1625"
-  HREF="node32.html#SECTION04420090000000000000">optimize</A>
+  HREF="node32.html#SECTION04420090000000000000">cache</A>
+<LI><A NAME="tex2html1626"
+  HREF="node32.html#SECTION044200100000000000000">optimize</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -428,6 +430,21 @@ La opción
 
 <FONT COLOR="#ff0000"> plugins</FONT>
 indica que plugin se van a usar.
+<PRE>
+$ pegjs --plugin pegjs-coffee-plugin remove_left_recursive.pegjs
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION04420080000000000000">
+PEGjs  Coffee Plugin </A>
+</H4>
+  
+
+<P>
+<A NAME="tex2html251"
+  HREF="https://github.com/Dignifiedquire/pegjs-coffee-plugin">PEGjs Coffee Plugin </A>
+is a plugin for PEG.js to use CoffeeScript in actions.
 
 <P>
 <PRE>
@@ -457,7 +474,7 @@ r = hello world!
 
 <P>
 
-<H4><A NAME="SECTION04420080000000000000">
+<H4><A NAME="SECTION04420090000000000000">
 cache</A>
 </H4>
   
@@ -469,7 +486,7 @@ time in pathological cases but making the parser slower (default:
 
 <P>
 
-<H4><A NAME="SECTION04420090000000000000">
+<H4><A NAME="SECTION044200100000000000000">
 optimize</A>
 </H4>
   
