--- a/node105.html
+++ b/node105.html
@@ -383,7 +383,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <DT><STRONG>recursion</STRONG>
 <DD><A HREF="node55.html#8068">Práctica: Calculadora con Análisis</A>
 <DT><STRONG>recursiva por la derecha</STRONG>
-<DD><A HREF="node37.html#6339">Eliminación Usando Predicados Semánticos</A>
+<DD><A HREF="node37.html#6339">Eliminación Usando Predicados Semánticos:</A>
 <DT><STRONG>recursiva por la izquierda</STRONG>
 <DD><A HREF="node23.html#4866">Recursión por la Izquierda</A>
  | <A HREF="node33.html#6222">Asociación Incorrecta para la</A>
