--- a/node30.html
+++ b/node30.html
@@ -232,9 +232,9 @@ Análisis Descendente mediante Parsing Expresion Grammars en JavaScript</A>
 <LI><A NAME="tex2html1556"
   HREF="node37.html#SECTION04472000000000000000">Eliminado la Recursividad por la Izquierda en la Calculadora Usando Operadores de Repetición</A>
 <LI><A NAME="tex2html1557"
-  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos</A>
+  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos: Sólo Sintáxis</A>
 <LI><A NAME="tex2html1558"
-  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda Incluyendo la Semántica</A>
 <LI><A NAME="tex2html1559"
   HREF="node37.html#SECTION04475000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 <LI><A NAME="tex2html1560"
