--- a/node37.html
+++ b/node37.html
@@ -117,9 +117,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html1725"
   HREF="node37.html#SECTION04472000000000000000">Eliminado la Recursividad por la Izquierda en la Calculadora Usando Operadores de Repetición</A>
 <LI><A NAME="tex2html1726"
-  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos</A>
+  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos: Sólo Sintáxis</A>
 <LI><A NAME="tex2html1727"
-  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda Incluyendo la Semántica</A>
 <LI><A NAME="tex2html1728"
   HREF="node37.html#SECTION04475000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 <LI><A NAME="tex2html1729"
@@ -439,7 +439,7 @@ console.log(r);
 <H2><A NAME="SECTION04473000000000000000"></A>
 <A NAME="subsection:eliminaleftrec"></A>
 <BR>
-Eliminación Usando Predicados Semánticos
+Eliminación Usando Predicados Semánticos: Sólo Sintáxis
 </H2>
 La sección anterior da una forma sencilla de resolver el problema respetando la semántica.
 Si no se dispone de operadores de repetición la cosa se vuelve mas complicada.
@@ -574,7 +574,7 @@ de árboles operadores como el menos, que son asociativos a izquierdas.
 <H2><A NAME="SECTION04474000000000000000"></A>
 <A NAME="subsection:eliminarecesquem"></A>
 <BR>
-Eliminación de la Recursión por la Izquierda en un Esquema de Traducción
+Eliminación de la Recursión por la Izquierda Incluyendo la Semántica
 </H2>
 La eliminación de la recursión por la izquierda es sólo un paso: debe 
 ser extendida a esquemas de traducción, 
