--- a/node6.html
+++ b/node6.html
@@ -230,9 +230,9 @@ PARTE: APUNTES DE PROCESADORES DE LENGUAJES</A>
 <LI><A NAME="tex2html891"
   HREF="node37.html#SECTION04472000000000000000">Eliminado la Recursividad por la Izquierda en la Calculadora Usando Operadores de Repetición</A>
 <LI><A NAME="tex2html892"
-  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos</A>
+  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos: Sólo Sintáxis</A>
 <LI><A NAME="tex2html893"
-  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda Incluyendo la Semántica</A>
 <LI><A NAME="tex2html894"
   HREF="node37.html#SECTION04475000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 <LI><A NAME="tex2html895"
