--- a/node102.html
+++ b/node102.html
@@ -224,9 +224,9 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <LI><A NAME="tex2html3020"
   HREF="node37.html#SECTION04472000000000000000">Eliminado la Recursividad por la Izquierda en la Calculadora Usando Operadores de Repetición</A>
 <LI><A NAME="tex2html3021"
-  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos</A>
+  HREF="node37.html#SECTION04473000000000000000">Eliminación Usando Predicados Semánticos: Sólo Sintáxis</A>
 <LI><A NAME="tex2html3022"
-  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda en un Esquema de Traducción</A>
+  HREF="node37.html#SECTION04474000000000000000">Eliminación de la Recursión por la Izquierda Incluyendo la Semántica</A>
 <LI><A NAME="tex2html3023"
   HREF="node37.html#SECTION04475000000000000000">Eliminación de la Recursividad por la Izquierda en PEGJS</A>
 <LI><A NAME="tex2html3024"
