--- a/node32.html
+++ b/node32.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1612"
+<A NAME="tex2html1611"
   HREF="node33.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1606"
+<A NAME="tex2html1605"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1600"
+<A NAME="tex2html1599"
   HREF="node31.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1608"
+<A NAME="tex2html1607"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1610"
+<A NAME="tex2html1609"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1613"
+<B> Sig:</B> <A NAME="tex2html1612"
   HREF="node33.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1607"
+<B>Sup:</B> <A NAME="tex2html1606"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1601"
+<B> Ant:</B> <A NAME="tex2html1600"
   HREF="node31.html">Introducción a los PEGs</A>
 <B> Con:</B> 
-<A NAME="tex2html1608"
+<A NAME="tex2html1607"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1610"
+<A NAME="tex2html1609"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,34 +103,32 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1614"
+<LI><A NAME="tex2html1613"
   HREF="node32.html#SECTION04420010000000000000">What is</A>
-<LI><A NAME="tex2html1615"
+<LI><A NAME="tex2html1614"
   HREF="node32.html#SECTION04420020000000000000">Installation</A>
-<LI><A NAME="tex2html1616"
+<LI><A NAME="tex2html1615"
   HREF="node32.html#SECTION04420030000000000000">El compilador de línea de comandos</A>
-<LI><A NAME="tex2html1617"
+<LI><A NAME="tex2html1616"
   HREF="node32.html#SECTION04420040000000000000">Using it</A>
-<LI><A NAME="tex2html1618"
+<LI><A NAME="tex2html1617"
   HREF="node32.html#SECTION04420050000000000000">Opciones: allowedStartRules</A>
-<LI><A NAME="tex2html1619"
+<LI><A NAME="tex2html1618"
   HREF="node32.html#SECTION04420060000000000000">Opciones: output</A>
-<LI><A NAME="tex2html1620"
+<LI><A NAME="tex2html1619"
   HREF="node32.html#SECTION04420070000000000000">Opciones: plugin</A>
-<LI><A NAME="tex2html1621"
+<LI><A NAME="tex2html1620"
   HREF="node32.html#SECTION04420080000000000000">PEGjs  Coffee Plugin </A>
-<LI><A NAME="tex2html1622"
+<LI><A NAME="tex2html1621"
   HREF="node32.html#SECTION04420090000000000000">Instalación de pegjs-coffee-plugin</A>
-<LI><A NAME="tex2html1623"
+<LI><A NAME="tex2html1622"
   HREF="node32.html#SECTION044200100000000000000">Ejemplo con Acciones Semánticas en Coffee</A>
+<LI><A NAME="tex2html1623"
+  HREF="node32.html#SECTION044200110000000000000">Véase También</A>
 <LI><A NAME="tex2html1624"
-  HREF="node32.html#SECTION044200110000000000000">pegcoffee</A>
+  HREF="node32.html#SECTION044200120000000000000">cache</A>
 <LI><A NAME="tex2html1625"
-  HREF="node32.html#SECTION044200120000000000000">Véase También</A>
-<LI><A NAME="tex2html1626"
-  HREF="node32.html#SECTION044200130000000000000">cache</A>
-<LI><A NAME="tex2html1627"
-  HREF="node32.html#SECTION044200140000000000000">optimize</A>
+  HREF="node32.html#SECTION044200130000000000000">optimize</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
@@ -530,37 +528,15 @@ console.log(r)
 </PRE>
 
 <P>
+<PRE>
+[~/srcPLgrado/pegjs/examples/coffee-plugin-examples(master)]$ pegjs --plugin pegjs-coffee-plugin simple.pegjs[~/srcPLgrado/pegjs/examples/coffee-plugin-examples(master)]$ coffee use_simple.coffee
+input = 3-1-2 result = 0
+input = 2+3*(2+1)-10/2 result = 6
+</PRE>
+
+<P>
 
 <H4><A NAME="SECTION044200110000000000000">
-pegcoffee</A>
-</H4>
-  
-
-<P>
-<PRE>
-[~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ cat Rakefile 
-
-task :default do 
-  sh "pegcoffee simple.pegjs"
-end
-
-task :run do
-  sh "coffee use_simple.coffee"
-end
-</PRE>
-
-<P>
-<PRE>
-[~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ rake
-pegcoffee simple.pegjs
-[~/Dropbox/src/javascript/PLgrado/pegjs-coffee-plugin/examples(master)]$ rake run
-coffee use_simple.coffee
-6
-</PRE>
-
-<P>
-
-<H4><A NAME="SECTION044200120000000000000">
 Véase También</A>
 </H4>
   
@@ -574,7 +550,7 @@ en GitHub
 
 <P>
 
-<H4><A NAME="SECTION044200130000000000000">
+<H4><A NAME="SECTION044200120000000000000">
 cache</A>
 </H4>
   
@@ -586,7 +562,7 @@ time in pathological cases but making the parser slower (default:
 
 <P>
 
-<H4><A NAME="SECTION044200140000000000000">
+<H4><A NAME="SECTION044200130000000000000">
 optimize</A>
 </H4>
   
@@ -598,19 +574,19 @@ Selects between optimizing the generated parser for parsing speed
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1612"
+<A NAME="tex2html1611"
   HREF="node33.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1606"
+<A NAME="tex2html1605"
   HREF="node30.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1600"
+<A NAME="tex2html1599"
   HREF="node31.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1608"
+<A NAME="tex2html1607"
   HREF="node101.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1610"
+<A NAME="tex2html1609"
   HREF="node104.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -650,11 +626,11 @@ Selects between optimizing the generated parser for parsing speed
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1613"
+<B> Sig:</B> <A NAME="tex2html1612"
   HREF="node33.html">Un Ejemplo Sencillo</A>
-<B>Sup:</B> <A NAME="tex2html1607"
+<B>Sup:</B> <A NAME="tex2html1606"
   HREF="node30.html">Análisis Descendente mediante Parsing</A>
-<B> Ant:</B> <A NAME="tex2html1601"
+<B> Ant:</B> <A NAME="tex2html1600"
   HREF="node31.html">Introducción a los PEGs</A>
 </DIV>
 <!--End of Navigation Panel-->
