--- a/node36.html
+++ b/node36.html
@@ -151,12 +151,8 @@ origin  git@github.com:crguezl/pegjs.git (push)
 <LI><A NAME="tex2html257"
   HREF="https://github.com/crguezl/pegjs/tree/master/examples">https://github.com/crguezl/pegjs/tree/master/examples</A>
 </LI>
-</UL>
-
-<P>
-
-<UL>
-<LI>
+<LI><A NAME="tex2html258"
+  HREF="http://crguezl.github.io/pegjs/examples/calculator.html">http://crguezl.github.io/pegjs/examples/calculator.html</A>
 </LI>
 </UL>
 
