--- a/node37.html
+++ b/node37.html
@@ -801,7 +801,7 @@ Además nos obliga a usar variables visibles por todas las reglas semánticas pa
 a los atributos de la parte izquierda de una regla de producción.
 
 <P>
-El siguiente ejemplo ilustra como eliminar la reucrusión por la izquierda respetando la asociatividad de la operación de diferencia:
+El siguiente ejemplo ilustra como eliminar la recursión por la izquierda respetando la asociatividad de la operación de diferencia:
 
 <P>
 <PRE>
