--- a/node37.html
+++ b/node37.html
@@ -530,7 +530,7 @@ eliminando así la recursión por la izquierda.
 <SPAN CLASS="MATH"><IMG
  WIDTH="70" HEIGHT="16" ALIGN="BOTTOM" BORDER="0"
  SRC="img93.png"
- ALT="$ R \rightarrow \alpha R$"></SPAN> se dice <A NAME="6363"></A><SPAN  CLASS="textbf">recursiva por la derecha</SPAN>.</I></DIV><P></P>
+ ALT="$ R \rightarrow \alpha R$"></SPAN> se dice <A NAME="6364"></A><SPAN  CLASS="textbf">recursiva por la derecha</SPAN>.</I></DIV><P></P>
 
 <P>
 Las producciones recursivas por la derecha dan lugar a árboles
@@ -818,6 +818,9 @@ NUMBER = _ digits:$[0-9]+ _  { number = parseInt(digits, 10); return number; }
 
 _ = $[ \t\n\r]*
 </PRE>
+Aquí <code>h</code> - aún cuando se trata de una variable compartida - 
+es usado como si fuera un atributo de los símbolos del PEG. Un tal atributo se 
+denomina <A NAME="6366"></A><SPAN  CLASS="textbf">heredado</SPAN>.
 
 <P>
 Este es el código para usar el PEG anterior:
