--- a/node37.html
+++ b/node37.html
@@ -878,7 +878,7 @@ value   = number:$[0-9]+                     { return parseInt(number,10); }
 </PRE>
 El primer predicado <code>first:value &amp;{ return initsum(first); }</code> inicializa la suma.
 A continuación y aprovechando el cierre <code>*</code> se ejecuta en bucle el segundo predicado
-<code>(op:[+-] product:value &amp; { return add(op, product); })</code>i que va acumulando el resultado.
+<code>(op:[+-] product:value &amp; { return add(op, product); })</code> que va acumulando el resultado.
 La acción semántica final se limita a retornar el resultado acumulado.
 <PRE>
 [~/srcPLgrado/pegjs/examples(master)]$ cat use_simple2.js
